infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  # how to create individual pod during Deployment is going to create
  template:
    metadata:
      labels:
        app: auth
    # how pod is going to behave
    spec:
      containers:
        - name: auth # name of container
          image: jahidhiron/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  # select pod to access
  selector:
    app: auth
  # all the ports that we are going to expose for that pod
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
